# promo-success-prediction-api

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
data/: generate_data.py
src/app/: __init__.py  config.py  features.py  inference.py  main.py  model.py  schemas.py
tests/: test_api.py  test_inference.py
